Exercise 4.02: Probes for the project
- Probes were existing already
- Add initcontainers to apps that require
database to be running
- Improve resolve yaml template tool debugging
- Remove obsolete references of resolve helm template tool
- Simplify the launch script and do the "temp dirring" in
upper level
- Create a test case that demonstrates proper behavior
of the probe
- Changed 'include' keyword instead of 'template' keyword
to keep template consistently defined
- Thanks to improved probing & start-up handling, it is
now possible to execute all the apps in parallel without
excessive amount of crash resets

--- a/project-common/databases/postgres/manifests/templates/statefulSet.yaml
+++ b/project-common/databases/postgres/manifests/templates/statefulSet.yaml
@@ -16,7 +16,7 @@ spec:
         app: {{index .containerNames 0}}
     spec:
       containers:
-          {{- template "container.base" $}}
+          {{- include "container.base" $}}
           envFrom:
             - secretRef:
                 name: {{index .containerNames 0}}
