--- a/project/apps/frontend/manifests/templates/ingress.yaml
+++ b/project/apps/frontend/manifests/templates/ingress.yaml
@@ -14,7 +14,7 @@ spec:
     - http:
         # Path for this application also accessible via default backend.
         paths:
-          {{- template "ingress.path" $.Values}}
-          {{- template "ingress.path" $.Values.apps.backend}}
-          {{- template "ingress.path" $.Values.apps.imagefile}}
+          {{- include "ingress.path" $.Values}}
+          {{- include "ingress.path" $.Values.apps.backend}}
+          {{- include "ingress.path" $.Values.apps.imagefile}}
 {{- end}}
