--- a/project/apps/imagefile/manifests/values.yaml
+++ b/project/apps/imagefile/manifests/values.yaml
@@ -14,7 +14,7 @@ depValues:
         - containerNames
 depValuesNoRoute:
   project:
-    initjobs:
+    jobs:
       picturefetcher:
         - dbItemId
         - dbTableName
