--- a/project-other/apps/pingpong/manifests/templates/deployment.yaml
+++ b/project-other/apps/pingpong/manifests/templates/deployment.yaml
@@ -1,18 +1,18 @@
 ---
 {{- with .Values}}
-{{- template "deployment.spec.base" $}}
+{{- include "deployment.spec.base" $}}
     spec:
-      {{- template "init.container.waitdb" $}}
+      {{- include "init.container.waitdb" $}}
       containers:
-          {{- template "container.base" $}}
+          {{- include "container.base" $}}
           envFrom:
             - secretRef:
                 name: {{index .databases.postgres.containerNames 0}}
           ports:
             - containerPort: {{.appPort}}
-          {{- template "probes.get" $}}
-          {{- template "security.context" $}}
-          {{- template "volumemounts.base" $}}
-      {{- template "volumes.base" $}}
+          {{- include "probes.get" $}}
+          {{- include "security.context" $}}
+          {{- include "volumemounts.base" $}}
+      {{- include "volumes.base" $}}
       terminationGracePeriodSeconds: 5
 {{- end}}
