--- a/project/apps/imagefile/manifests/templates/deployment.yaml
+++ b/project/apps/imagefile/manifests/templates/deployment.yaml
@@ -1,15 +1,16 @@
 ---
 {{- with .Values}}
-{{- template "deployment.spec.base" $}}
+{{- include "deployment.spec.base" $}}
     spec:
+      {{- include "init.container.waitdb" $}}
       containers:
-          {{- template "container.base" $}}
-          {{- template "postgres.env" $}}
+          {{- include "container.base" $}}
+          {{- include "postgres.env" $}}
           ports:
             - containerPort: {{.appPort}}
-          {{- template "probes.get" $}}
-          {{- template "security.context" $}}
-          {{- template "volumemounts.base" $}}
-      {{- template "volumes.base" $}}
+          {{- include "probes.get" $}}
+          {{- include "security.context" $}}
+          {{- include "volumemounts.base" $}}
+      {{- include "volumes.base" $}}
       terminationGracePeriodSeconds: 5
 {{- end}}
