--- a/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
+++ b/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
@@ -14,6 +14,7 @@ spec:
             job: {{index .containerNames 0}}
         spec:
           restartPolicy: OnFailure
+          {{- include "init.container.waitdb" $ | indent 4}}
           containers:
               {{- include "container.base" $ | indent 4}}
               {{- include "postgres.env" $ | indent 4}}
