Exercise 4.04: Analysis template
- Create a test where it is validated
that rollout will not succeed if analysis
fails

- Create debug bash environment
and remove redundant debug code
- Simplify testing related scripts
- Update ruff
- Modify exercise 402 test so that
original deployment is restored at
the end of the test
- Improved wait-for-pod.sh script to
handle scenarios where pod is not created
yet when starting the polling

--- a/base_templates/templates/horizontalpodautoscaler.yaml
+++ b/base_templates/templates/horizontalpodautoscaler.yaml
@@ -7,10 +7,10 @@ metadata:
   name: {{index .containerNames 0}}-hpa
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
+    apiVersion: argoproj.io/v1alpha1
+    kind: Rollout
     name: {{index .containerNames 0}}
-  minReplicas: 1
+  minReplicas: 2
   maxReplicas: 6
   metrics:
     - type: Resource
